syntax = "proto3";

package Models;
option csharp_namespace = "Benchy.Protobuf";

message Error
{
    repeated string error_messages = 1;
}
